# MK

./: .gitignore  Dockerfile.api  README.md  config.example.yaml  deploy-ec2.sh  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ERROR_HANDLING.md  WEBUI_BLUEPRINT.md  openapi.json
gateway/: Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
gateway/src/: bridge.ts  config.ts  discord.ts  index.ts  telegram.ts  types.ts  voice.ts
gateway/tests/: bridge.test.ts
os-build/: Dockerfile  README.md  build.sh  install.sh  mk-shell.sh  mk-web.service  mk.service  motd
scripts/: generate-openapi.py
src/mk/: __init__.py  boot.py  chat.py  clock.py  doctor.py  main.py  metrics.py  observability.py
tests/: __init__.py  conftest.py  test_doctor.py
tests/brain/: test_brain.py
tests/config/: test_validate.py
tests/core/: test_agent_loop.py  test_agent_stream.py  test_command_router.py  test_context.py  test_engine_stream.py
tests/llm/: __init__.py  test_compression.py  test_local_brain.py  test_metrics.py  test_providers.py  test_router.py  test_streaming.py  test_token_manager.py  test_universal_provider.py
tests/memory/: __init__.py  test_long_term.py  test_manager.py  test_short_term.py  test_sqlite_store.py
tests/ops/: test_notifications.py
tests/plugins/: test_sandbox_security.py
tests/safety/: __init__.py  test_audit.py  test_confirmation.py  test_health.py  (+1 more)
training/: README.md
webui/: .npmrc  Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
(+299 files in other folders)
