[project]
name = "mk"
version = "2.0.0"
description = "MK - Personal AI Operating System"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "MK", email = "mk@localhost" },
]
dependencies = [
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "cryptography>=41.0",
    "rich>=13.0",
    "aiofiles>=23.0",
    "aiohttp>=3.9.0",
    "numpy>=1.24.0",
]

[project.scripts]
mk = "mk.main:cli_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]
